updated DA path, and various other changes
