# services/core/user/app/swagger.yml
@@ -45,37 +45,14 @@ paths:
           description: User was returned successfuly
       parameters:
         - $ref: '#/parameters/id'
-    # patch:
-    #   summary: update a user.
-    #   description: Optional extended description in CommonMark or HTML.
-    #   operationId: user_api.patch_user
-    #   consumes:
-    #     - application/json
-    #   parameters:
-    #     - in: path
-    #       name: user_id
-    #       schema:
-    #         type: string
-    #       required: true
-    #     - in: body
-    #       name: update
-    #       description: The information to update.
-    #       schema:
-    #         type: object
-    #         properties:
-    #           username:
-    #             type: string
-    #           password:
-    #             type: string
-    #           deviceList:
-    #             type: string
-    #           ruleList:
-    #             type: string
-    #           groupList:
-    #             type: string
-    #   responses:
-    #     200:    # status code
-    #       description: A user
+    patch:
+      summary: patches user info
+      operationId: user_data_access.patch_user
+      parameters:
+        - $ref: '#/parameters/patchUser'
+      responses:
+        200:    #status code
+          description: user was patched successfully
     delete:
       summary: Deletes a user.
       description: Optional extended description in CommonMark or HTML.
@@ -109,4 +86,31 @@ parameters:
     in: path
     type: string
     required: true
+  patchUser:
+    in: body
+    name: userInfo
+    description: User info to be patched
+    schema:
+      type: object
+      required:
+        - userId
+        - operation
+      properties:
+        userId:
+          type: string
+        username:
+          type: string
+        operation:
+          type: boolean
+        password:
+          type: string
+        device:
+          type: string
+        rule:
+          type: string
+        grouping:
+          type: string
+        other_device:
+          type: string
+
   
